syntax = "proto3";

package onight.zjfae.afront.gens;

option java_outer_classname="BankCardManageUnBindBankCard";
//Generated By BrewRobot:Thu Dec 14 16:42:35 CST 2017

message PBIFE_bankcardmanage_unbindBankCard{
	///ife/bankcardmanage/unbindBankCard.html
	
	string asynchronous = 1; //,是否异步,String,不校验,是,

	string serialNo = 2; //,流水号,String,不校验,是,
	
	string 	bankCode = 3; //,银行编号,String,不校验,是,

}

message Ret_PBIFE_bankcardmanage_unbindBankCard{
	///ife/bankcardmanage/unbindBankCard.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_bankcardmanage_unbindBankCard data=3;


}

message REQ_PBIFE_bankcardmanage_unbindBankCard{
	///ife/bankcardmanage/unbindBankCard.html

	string unbindCardReason = 1; //,解绑原因,String,不校验,否,

	string reasonDetails = 2; //,原因详情,String,不校验,否,

	string checkCode = 3; //,验证码,String,不校验,否,

	string checkCodeSerialNo = 4; //,验证码序列号,String,不校验,否,
	
	string payChannelNo = 5; //,支付渠道,String,不校验,否,
	
	string faceId = 6; //,人脸识别标识,String,不校验,否,

	string tencentfaceOrder = 7; //,腾讯人脸识别订单号


}